# silent.worm

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: brain.sh  build.sh  copy.sh  run.sh  start.sh  update.sh
silent/: advanced_duo.py  advanced_team.py  code_duo.py  team.py
silent/worm/: config.py  prompts.py  rate_limited_group.py  sanitize.py  team_group.py  utilities.py
